--- a/doi_server/Gemfile
+++ b/doi_server/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+gem 'quiet_assets', group: :development
+gem 'better_errors', group: :development
+gem 'binding_of_caller', group: :development
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.6'
