--- a/img/Gemfile
+++ b/img/Gemfile
@@ -1,5 +1,9 @@
 source 'https://rubygems.org'
 
+gem 'quiet_assets', group: :development
+gem 'better_errors', group: :development
+gem 'binding_of_caller', group: :development
+gem 'devise'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.6'
