--- a/img/test/fixtures/tags.yml
+++ b/img/test/fixtures/tags.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  tag: MyString
-  img_id: 
+  msg: MyString
+  image_id: 
 
 two:
-  tag: MyString
-  img_id: 
+  msg: MyString
+  image_id: 
